# SimplePathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  Ray.sln
Ray/: Main.cpp  Ray.vcxproj
cmake/: GlbindingConfig.cmake  GlfwConfig.cmake  ImguiConfig.cmake  StbConfig.CMAKE
dependencies/: CMakeLists.txt
dependencies/GL/: gl3w.h
include/: Collision.hpp  Definitions.hpp  Gl.hpp  Globals.hpp  IOHelpers.hpp  Math.hpp  Random.hpp  Renderer.hpp  SceneGenerators.hpp  SingleThreadPathTracer.hpp  TaskBasedPathTracer.hpp
shaders/: shader.frag  shader.vert
